--- a/.github/workflows/lint_pr.yml
+++ b/.github/workflows/lint_pr.yml
@@ -1,4 +1,4 @@
-name: Stricter python linting on changes only
+name: Linting on PR, with stricter rules on new code
 
 on: [pull_request]
 
@@ -9,15 +9,26 @@ jobs:
     steps:
     - uses: actions/checkout@v1
 
-    - name: Set up Python
+    strategy:
+      matrix:
+        python-version: [3.5, 3.6, 3.7, 3.8, 3.9]
+
+    steps:
+    - uses: actions/checkout@v1
+    - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v1
       with:
-        python-version: 3.8
+        python-version: ${{ matrix.python-version }}
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         python -m pip install flake8
+
+    - name: Install dependencies to lint docstrings
+      if: matrix.python-version == 3.9
+      run: |
+        python -m pip install flake8-docstrings
 
     - name: Fetch pull request
       run: |
