--- a/.github/workflows/lint_push.yml
+++ b/.github/workflows/lint_push.yml
@@ -1,4 +1,4 @@
-name: Basic python linting
+name: Linting on push
 
 on: [push]
 
@@ -27,13 +27,12 @@ jobs:
         # Full list of ignores, fail on errors. No Docs errors.
         flake8 . --count --show-source --statistics --select=E,F,W,C
 
-    - name: Lint docstrings dependencies
+    - name: Install dependencies to lint docstrings
       if: matrix.python-version == 3.9
       run: |
-        python -m pip install flake8-docstrings | sed -r 'h;s/^(\S+):([0-9]+):([0-9]+): /::error file=\1,line=\2,col=\3::/p;g'
+        python -m pip install flake8-docstrings
 
     - name: Lint docstrings
       if: matrix.python-version == 3.9
       run: |
-        # Full list of ignores, fail on errors. No Docs errors.
         flake8 . --count --show-source --statistics --select=D | sed -r 'h;s/^(\S+):([0-9]+):([0-9]+): /::warning file=\1,line=\2,col=\3::/p;g'
