Make “next slide” a grid of 1-16 next slides
Also use a stateful action to store and modify the number of slides in
the grid.

--- a/pympress/share/defaults.conf
+++ b/pympress/share/defaults.conf
@@ -15,6 +15,7 @@ show_bigbuttons = off
 show_annotations = off
 scroll_number = off
 slide_ratio = 0.75
+next_slide_count = 1
 
 [layout]
 plain = {
