Add shortcuts for saving actions

--- a/pympress/share/defaults.conf
+++ b/pympress/share/defaults.conf
@@ -175,6 +175,8 @@ cancel-input = Escape
 # prompt to open file
 pick-file = o
 close-file = <ctrl>w
+save-file = <ctrl>s
+save-file-as = <ctrl><shift>s
 
 pointer-mode::toggle = l
 pause-timer = p Pause
