Silence warning in setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -130,7 +130,7 @@ requires =
 	%%{?typelib_deps:typelib(cairo) typelib(GLib) typelib(DBus) typelib(DBusGLib) typelib(GObject) typelib(Gdk) typelib(GdkPixbuf) typelib(Gio) typelib(Gtk) typelib(Poppler)}
 	%%{!?suse_version:python%%{python3_version}dist(pygobject)}
 	%%{!?mga_version:python3-gobject}
-build-requires =
+build_requires =
 	python3-devel
 	python3-setuptools
 	findutils
