--- a/setup.cfg
+++ b/setup.cfg
@@ -41,6 +41,9 @@ packages =
 python_requires = >=3.4
 install_requires =
 	watchdog
+build_requires =
+	setuptools
+	babel
 
 [options.extras_require]
 build_sphinx =
@@ -115,30 +118,25 @@ directory = pympress/share/locale/
 use-fuzzy = false
 statistics = true
 
-[bdist_rpm]
-bdist_base = build
-license = LICENSE.txt
-install_script = scripts/rpm_install
-build_script = scripts/rpm_build
-post_install = scripts/rpm_post_install
-# Do not fix the interpreter path
-python = python3
-# NB: py3_dist and typelib_deps are defined in the spec
+[pysrpm]
+flavour = pympress
 requires =
-	python(abi) = %%{python3_version}
+	%%{py3_dist watchdog}
 	%%{!?typelib_deps:gtk3 gdk-pixbuf2 poppler-glib gobject-introspection}
 	%%{?typelib_deps:typelib(cairo) typelib(GLib) typelib(DBus) typelib(DBusGLib) typelib(GObject) typelib(Gdk) typelib(GdkPixbuf) typelib(Gio) typelib(Gtk) typelib(Poppler)}
-	%%{!?suse_version:python%%{python3_version}dist(pygobject)}
+	%%{!?suse_version:python%%%%{python3_version}dist(pygobject)}
 	%%{!?mga_version:python3-gobject}
-build_requires =
-	python3-devel
-	python3-setuptools
-	findutils
-	gettext
-recommends =
-	%%{py3_dist watchdog}
-suggests =
-	(vlc and %%{py3_dist python-vlc}) or (
-	%%{?typelib_deps:typelib(Gst) and typelib(GstPlayer)}
-	%%{!?typelib_deps:gstreamer1 and gstreamer1-plugins-bad-free}
-	)
+
+[pysrpm.pympress]
+preamble =
+	%%define normalize() %%(echo %%* | tr "[:upper:]_ " "[:lower:]--")
+	%%{?!py3_dist:%%define py3_dist() (python%%{{python3_version}}dist(%%{{normalize %%1}}) or python3-%%1)}
+	%%{?suse_version:%%define typelib_deps 1}
+	%%{?mga_version:%%define typelib_deps 1}
+	${base:preamble}
+
+post = ${base:post}
+	if [ $$1 -gt 1 ]; then
+		# On update, check for directories left by previous versions
+		find `%%__python3 -c 'import site; print("\n".join(site.getsitepackages()))'` -maxdepth 1 -name 'pympress-1.5.*' -exec rm -rf {{}} + 2>/dev/null
+	fi
