--- a/setup.cfg
+++ b/setup.cfg
@@ -137,6 +137,6 @@ preamble =
 
 post = ${base:post}
 	if [ $$1 -gt 1 ]; then
-		# On update, check for directories left by previous versions
-		find `%%__python3 -c 'import site; print("\n".join(site.getsitepackages()))'` -maxdepth 1 -name 'pympress-1.5.*' -exec rm -rf {{}} + 2>/dev/null
+		# On update, remove directories incorrectly left behind by previous versions
+		find "%%{{python3_sitelib}}" -maxdepth 1 -name 'pympress-1.5.*' -print0 | xargs -0 --no-run-if-empty rm -r
 	fi
