--- a/setup.cfg
+++ b/setup.cfg
@@ -121,19 +121,24 @@ statistics = true
 [pysrpm]
 flavour = pympress
 requires =
-	%%{py3_dist watchdog}
-	%%{!?typelib_deps:gtk3 gdk-pixbuf2 poppler-glib gobject-introspection}
-	%%{?typelib_deps:typelib(cairo) typelib(GLib) typelib(DBus) typelib(DBusGLib) typelib(GObject) typelib(Gdk) typelib(GdkPixbuf) typelib(Gio) typelib(Gtk) typelib(Poppler)}
-	%%{!?suse_version:python%%%%{python3_version}dist(pygobject)}
+	gtk3 gdk-pixbuf2 poppler-glib gobject-introspection gstreamer gstreamer-plugins-base gstreamer-plugins-good
+	%%{?typelib_deps:typelib(cairo) typelib(GLib) typelib(DBus) typelib(DBusGLib) typelib(GObject) typelib(Gdk) typelib(GdkPixbuf) typelib(Gio) typelib(Gtk) typelib(Poppler) typelib(Gst)}
+	%%{!?suse_version:python%%{python3_version}dist(pygobject)}
 	%%{!?mga_version:python3-gobject}
+	%%{py3_dist watchdog}
+
+recommends = gstreamer-plugins-ugly gstreamer-plugins-bad
 
 [pysrpm.pympress]
 preamble =
 	%%define normalize() %%(echo %%* | tr "[:upper:]_ " "[:lower:]--")
-	%%{?!py3_dist:%%define py3_dist() (python%%{{python3_version}}dist(%%{{normalize %%1}}) or python3-%%1)}
-	%%{?suse_version:%%define typelib_deps 1}
-	%%{?mga_version:%%define typelib_deps 1}
+	%%{{?!py3_dist:%%define py3_dist() (python%%{{python3_version}}dist(%%{{normalize %%1}}) or python3-%%1)}}
+	%%{{?suse_version:%%define typelib_deps 1}}
+	%%{{?mga_version:%%define typelib_deps 1}}
 	${base:preamble}
+	%%if %%{{?!rhel:8}}%%{{?rhel}} >= 8
+	Recommends: ${recommends}
+	%%endif
 
 post = ${base:post}
 	if [ $$1 -gt 1 ]; then
