Try and generate appropriate gstreamer dependencies #231
|  According to https://pkgs.org/                              | gobject-introspection | typelibs | python3dist(pygobject) | python3.Ndist(pygobject) | python3-gobject |  python3N-gobject |
| ------------------------------------------------------------ | --------------------- | -------- | ---------------------- | ------------------------ | --------------- |  ---------------- |
| CentOS-stream, CentOS 7 (Epel), CentOS 8 (Epel)              |          Yes          |     No   |          8+            |           8+             |       8+        |          7        |
| Fedora 33+, eln, rawhide                                     |          Yes          |     No   |         Yes            |          Yes             |      Yes        |         No        |
| Mageia 8, Mageia cauldron                                    |          Yes          |    Yes   |         Yes            |          Yes             |      Yes        |         No        |
| Openmandriva cooker, Openmandriva rolling                    |          Yes          |    Yes   |         Yes            |          Yes             |       No        |         No        |
| OpenSUSE Leap 15.2, OpenSUSE Leap 15.3 OpenSUSE Tumbleweed   |          Yes          |    Yes   |       Tumbleweed       |        Tumbleweed        |      Yes        |     Tumbleweed    |

|  According to https://pkgs.org/ (continued)                  |      gstreamer1      |      gstreamer      |    libgstreamer1.0     |
|                                                              | gstreamer1-plugins-* | gstreamer-plugins-* | gstreamer1.0-plugins-* |
| ------------------------------------------------------------ | -------------------- | ------------------- | ---------------------- |
| CentOS-stream, CentOS 7 (Epel), CentOS 8 (Epel)              |          Yes         |          No         |            No          |
| Fedora 33+, eln, rawhide                                     |        

--- a/setup.cfg
+++ b/setup.cfg
@@ -120,24 +120,49 @@ statistics = true
 
 [pysrpm]
 flavour = pympress
-requires =
-	gtk3 gdk-pixbuf2 poppler-glib gobject-introspection gstreamer gstreamer-plugins-base gstreamer-plugins-good
-	%%{?typelib_deps:typelib(cairo) typelib(GLib) typelib(DBus) typelib(DBusGLib) typelib(GObject) typelib(Gdk) typelib(GdkPixbuf) typelib(Gio) typelib(Gtk) typelib(Poppler) typelib(Gst)}
-	%%{!?suse_version:python%%{python3_version}dist(pygobject)}
-	%%{!?mga_version:python3-gobject}
-	%%{py3_dist watchdog}
+extract_dependencies = no
+requires = gobject-introspection %%{py3_dist watchdog}
 
-recommends = gstreamer-plugins-ugly gstreamer-plugins-bad
+typelib_deps = typelib(cairo) typelib(GLib) typelib(DBus) typelib(DBusGLib) typelib(GObject) typelib(Gdk) typelib(GdkPixbuf) typelib(Gio) typelib(Gtk) typelib(Poppler) typelib(Gst) typelib(GstAllocators) typelib(GstApp) typelib(GstAudio) typelib(GstVideo) typelib(GstGL)
+typelib_recommends = typelib(GstMpegts) typelib(GstWebRTC) typelib(GstBadAudio) typelib(GstCodecs)
+
+requires_suse = gtk3 libpoppler-glib8 libgdk_pixbuf-2_0-0 gstreamer gstreamer-plugins-base gstreamer-plugins-good gstreamer-plugins-good-gtk libgstvideo-1_0-0
+recommends_suse = gstreamer-plugins-ugly gstreamer-plugins-bad
+
+requires_mandriva-mga =  gtk+3.0 (libpoppler-glib8 or lib64poppler-glib8) (libgdk_pixbuf2.0 or libgdk_pixbuf2.0_0) libgstreamer1.0 gstreamer1.0-plugins-base gstreamer1.0-plugins-good
+recommends_mandriva-mga = gstreamer1.0-plugins-ugly gstreamer1.0-plugins-bad
+
+requires_fedora-centos = gtk3 poppler-glib gdk-pixbuf2 gstreamer1 gstreamer1-plugins-base gstreamer1-plugins-good gstreamer1-plugins-good-gtk gstreamer1-plugins-bad-free gstreamer1-plugins-ugly-free
+recommends_fedora-centos = gstreamer1-plugins-good-extras gstreamer1-plugins-bad-free-extras gstreamer1-plugins-ugly gstreamer1-plugins-bad-free
 
 [pysrpm.pympress]
 preamble =
 	%%define normalize() %%(echo %%* | tr "[:upper:]_ " "[:lower:]--")
 	%%{{?!py3_dist:%%define py3_dist() (python%%{{python3_version}}dist(%%{{normalize %%1}}) or python3-%%1)}}
-	%%{{?suse_version:%%define typelib_deps 1}}
-	%%{{?mga_version:%%define typelib_deps 1}}
+
 	${base:preamble}
 	%%if %%{{?!rhel:8}}%%{{?rhel}} >= 8
-	Recommends: ${recommends}
+	Requires: (%%{{py3_dist pygobject}} or python3-gobject)
+	%%else
+	Requires: python3%%{{suffix:%%{{python3_version}}}}-gobject
+	%%endif
+	%%if 0%%{{?suse_version}}
+	Requires: ${requires_suse}
+	Recommends: ${recommends_suse}
+	%%endif
+	%%if 0%%{{?mdkversion}}%%{{?mga_version}}
+	Requires: ${requires_mandriva-mga}
+	Recommends: ${recommends_mandriva-mga}
+	%%endif
+	%%if 0%%{{?fedora}}%%{{?centos_version}}%%{{?scientificlinux_version}}%%{{?rhel}}
+	Requires: ${requires_fedora-centos}
+	%%if %%{{?!rhel:8}}%%{{?rhel}} >= 8
+	Recommends: ${recommends_fedora-centos}
+	%%endif
+	%%endif
+	%%if 0%%{{?suse_version}}%%{{?mga_version}}%%{{?mdkversion}}
+	Requires: ${typelib_deps}
+	Recommends: ${typelib_recommends}
 	%%endif
 
 post = ${base:post}
