--- a/.github/workflows/publish_release.yml
+++ b/.github/workflows/publish_release.yml
@@ -18,8 +18,25 @@ on:
 jobs:
   pypi:
     runs-on: ubuntu-latest
+    outputs:
+      tag: ${{ steps.name.outputs.tag }}
+      release: ${{ steps.name.outputs.release }}
+      url: ${{ steps.info.outputs.url }}
+      sha256: ${{ steps.info.outputs.sha256 }}
+
     steps:
-    - uses: actions/checkout@v1
+    - name: Define name
+      id: name
+      run: |
+        ref=${{ github.ref }}
+        [ "${ref::10}" = 'refs/tags/' ] && tag=${ref:10} || tag=${{ github.event.inputs.tag }}
+        if echo ${tag#v} | grep -qxE '[0-9]+(\.[0-9]+)*' ; then release=final; else release=prerelease; fi
+        echo ::set-output name=tag::${tag#v}
+        echo ::set-output name=release::$release
+
+    - uses: actions/checkout@v2
+      with:
+        ref: v${{ steps.name.outputs.tag }}
 
     - name: Set up Python
       uses: actions/setup-python@v1
@@ -47,6 +64,15 @@ jobs:
       run: |
         twine upload dist/*
 
+    - name: Get info from pypi
+      id: info
+      run: |
+        jq_script=`printf '.releases."%s"[]? | select(.python_version == "source")' ${{ steps.name.outputs.tag }}`
+        while ! curl -s https://pypi.org/pypi/pympress/json | jq -r -e "$jq_script" > lastsource.json ; do
+          sleep 60  # be patient with pypi
+        done
+        echo ::set-output name=url::`jq -r .digests.sha256 lastsource.json`
+        echo ::set-output name=sha256::`jq -r .digests.sha256 lastsource.json`
   copr:
     name: Download source RPM from release and upload to COPR
     runs-on: ubuntu-latest
@@ -80,23 +106,10 @@ jobs:
     runs-on: macos-latest
 
     steps:
-    - name: Define name
-      id: name
-      run: |
-        ref=${{ github.ref }}
-        [ "${ref::10}" = 'refs/tags/' ] && tag=${ref:10} || tag=${{ github.event.inputs.tag }}
-        if echo ${tag#v} | grep -qxE '[0-9]+(\.[0-9]+)*' ; then release=final; else release=prerelease; fi
-        echo ::set-output name=tag::${tag#v}
-        echo ::set-output name=release::$release
-
     - name: Install dependencies
       run: |
         brew update
-        brew install jq pipgrip
-
-    - name: Wait a reasonable amount of time for pypi to update its info
-      if: ${{ github.event_name == 'release' || github.event.inputs.skip_pypi == 'no' }}
-      run: sleep 60  # be patient with pypi
+        brew install pipgrip
 
     - name: Configure brew repo
       run: |
@@ -118,10 +131,9 @@ jobs:
         PASSWORD: ${{ secrets.GITHUB_HOMEBREW_TOKEN }}
 
     - name: Make a brew PR from pypi’s metadata
-      if: ${{ steps.name.outputs.release == 'final' }}
+      if: ${{ needs.pypi.outputs.release == 'final' }}
       run: |
-        jq_script=`printf '.releases."%s"[]? | select(.python_version == "source") | @text "--url=\(.url) --sha256=\(.digests.sha256)"' ${{ steps.name.outputs.tag }}`
-        brew bump-formula-pr --strict --no-browse `curl -s https://pypi.org/pypi/pympress/json | jq -r "$jq_script"` pympress
+        brew bump-formula-pr --strict --no-browse --url="${{needs.pypi.outputs.url}}" --sha256="${{needs.pypi.outputs.sha256}}" pympress
       env:
         HOMEBREW_GITHUB_API_TOKEN: ${{ secrets.GITHUB_HOMEBREW_TOKEN }}
         HUB_REMOTE: https://github.com/Cimbali/homebrew-core/
