--- a/.github/workflows/draft_release.yml
+++ b/.github/workflows/draft_release.yml
@@ -62,11 +62,8 @@ jobs:
         python3 -m pip install --upgrade pip
         python3 -m pip install setuptools wheel twine babel pysrpm rpmlint
 
-    - name: Update translations
-      env:
-        poeditor_api_token: ${{ secrets.POEDITOR_API_TOKEN }}
+    - name: Compile translations
       run: |
-        ./scripts/poedit.sh download
         python3 setup.py compile_catalog
 
     - name: Build binaries
@@ -148,12 +145,8 @@ jobs:
           python3 -m pip install --disable-pip-version-check --upgrade pip
           python3 -m pip install python-vlc
 
-      - name: Update translations
-        env:
-          poeditor_api_token: ${{ secrets.POEDITOR_API_TOKEN }}
-        run: |
-          ./scripts/poedit.sh download
-          python3 setup.py compile_catalog
+      - name: Compile translations
+        run: python3 setup.py compile_catalog
 
       - name: Build binary
         run: python3 setup.py --freeze build_exe
