Add option to stay in highlighting mode on page change #235

--- a/pympress/share/defaults.conf
+++ b/pympress/share/defaults.conf
@@ -135,6 +135,7 @@ color_9 = rgb(136,136,136)
 width_9 = 48
 active_pen = 9
 mode = single-page
+page_change_exits = on
 
 [gstreamer]
 enabled = on
