Rename option hold-to-erase instead of hold-erase
No renaming in config options as this is a quick & dirty fix before
release

--- a/pympress/share/defaults.conf
+++ b/pympress/share/defaults.conf
@@ -198,5 +198,5 @@ highlight-use-pen::7 = 7
 highlight-use-pen::8 = 8
 highlight-use-pen::9 = 9
 highlight-use-pen::eraser = 0
-highlight-hold-erase = <ctrl>
+highlight-hold-to-erase = <ctrl>
 highlight-clear =
