Replace deprecated recommonmark with myst-parser
Fixes #237

--- a/setup.cfg
+++ b/setup.cfg
@@ -47,9 +47,8 @@ build_requires =
 
 [options.extras_require]
 build_sphinx =
-	docutils==0.16
 	sphinx
-	recommonmark
+	myst-parser
 	sphinxcontrib-napoleon
 	sphinx-rtd-theme
 babel =
