Add a highlight + notes layout

--- a/pympress/share/defaults.conf
+++ b/pympress/share/defaults.conf
@@ -87,6 +87,33 @@ notes = {
 	    "orientation": "horizontal"
 	}
 
+highlight_notes_tools = vertical
+highlight_notes = {
+	    "resizeable": true,
+	    "orientation": "horizontal",
+	    "children": [
+	        "highlight",
+	        {
+	            "resizeable": true,
+	            "orientation": "vertical",
+	            "children": [
+	                "notes",
+	                "next",
+	                "annotations"
+	            ],
+	            "proportions": [
+	                0.55,
+	                0.35,
+	                0.20
+	            ]
+	        }
+	    ],
+	    "proportions": [
+	        0.67,
+	        0.33
+	    ]
+	}
+
 note_pages = {
 	    "resizeable": true,
 	    "children": [
