Add Chinese (simplified) translation

--- a/setup.cfg
+++ b/setup.cfg
@@ -29,6 +29,7 @@ classifiers =
 	Natural Language :: Polish
 	Natural Language :: Spanish
 	Natural Language :: Czech
+	Natural Language :: Chinese (simplified)
 	Operating System :: OS Independent
 	Programming Language :: Python
 	Topic :: Multimedia :: Graphics :: Presentation
