Fix classifiers for pypi upload

--- a/setup.cfg
+++ b/setup.cfg
@@ -26,10 +26,12 @@ classifiers =
 	Natural Language :: English
 	Natural Language :: French
 	Natural Language :: German
+	Natural Language :: Italian
 	Natural Language :: Polish
 	Natural Language :: Spanish
 	Natural Language :: Czech
-	Natural Language :: Chinese (simplified)
+	Natural Language :: Chinese (Simplified)
+	Natural Language :: Chinese (Traditional)
 	Operating System :: OS Independent
 	Programming Language :: Python
 	Topic :: Multimedia :: Graphics :: Presentation
